--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import './resources/theme';
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body {
+  display: flex;
+}
+
