--- a/src/app/home/browse-dialog/browse-dialog.component.html
+++ b/src/app/home/browse-dialog/browse-dialog.component.html
@@ -7,7 +7,7 @@
       <h4 md-line>{{album.name}}</h4>
       <p md-line> {{album.created_time | date}} </p>
     </md-list-item>
-    <md-list-item (click)="createAlbum(album)">
+    <md-list-item (click)="createAlbum()">
       <md-icon md-list-icon>add</md-icon>
       <div md-line> create album </div>
     </md-list-item>
