move upload-photos to new module

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,2 @@
-<md-toolbar color="primary">
-  <button md-icon-button (click)="login()">
-    <md-icon svgIcon="facebook-box"></md-icon>
-  </button>
-  <span class="spacer"></span>
-  <button md-icon-button>
-    <md-icon svgIcon="git"></md-icon>
-  </button>
-</md-toolbar>
-<md-tab-group>
-  <md-tab label="Create upload">
-    <app-create-upload></app-create-upload>
-  </md-tab>
-  <md-tab label="In-progress">
-    <app-in-progress></app-in-progress>
-  </md-tab>
-</md-tab-group>
+HOME
+
