--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
+<md-toolbar color="primary">
+  <button md-icon-button (click)="login()">
+    <md-icon svgIcon="facebook-box"></md-icon>
+  </button>
+  <button md-icon-button (click)="checkLoginStatus()">
+    <md-icon svgIcon="facebook-box"></md-icon>
+  </button>
+  <span class="spacer"></span>
+  <button md-icon-button (click)="logout()">
+    <md-icon svgIcon="facebook-box"></md-icon>
+  </button>
+  <button md-icon-button>
+    <md-icon svgIcon="git"></md-icon>
+  </button>
+</md-toolbar>
 <router-outlet></router-outlet>
