--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<md-sidenav-container>
+  <md-sidenav #sidenav>
+      <app-sidenav-portal></app-sidenav-portal>
+  </md-sidenav>
+
+  <div class="content">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
+
+</md-sidenav-container>
+
+
