--- a/src/app/header/provider-status/provider-status.component.html
+++ b/src/app/header/provider-status/provider-status.component.html
@@ -1,19 +1,18 @@
 <button class="status-button" md-button (click)="onButtonClick()">
   <div class="button-content">
-    <img class="avatar" [src]="userInfo?.picture.data.url"
-         *ngIf="provider.status === providerStatuses.CONNECTED && userInfo"/>
-    <md-icon [svgIcon]="icons[provider.name]"
+    <img class="avatar" src="{{user?.photoUrl}}"
+         *ngIf="provider.status === providerStatuses.CONNECTED && user"/>
+    <md-icon [svgIcon]="icons[provider.type]"
              *ngIf="provider.status !== providerStatuses.CONNECTED"></md-icon>
-    <div class="status-indicator" >
+    <div class="status-indicator">
       <md-spinner *ngIf="provider.status === providerStatuses.UNDEFINED"
                   color="accent" strokeWidth="12"></md-spinner>
       <md-icon color="warn" *ngIf="provider.status === providerStatuses.ERROR">error</md-icon>
-      <md-icon [svgIcon]="icons[provider.name]" *ngIf="provider.status === providerStatuses.CONNECTED"></md-icon>
+      <md-icon [svgIcon]="icons[provider.type]" *ngIf="provider.status === providerStatuses.CONNECTED"></md-icon>
       <span [mdMenuTriggerFor]="menu"></span>
     </div>
   </div>
 </button>
-
 <md-menu #menu="mdMenu">
   <button md-menu-item (click)="logout()">
     <md-icon>exit_to_app</md-icon>
