photo scroller && api get photos

--- a/src/app/photo-upload/create-upload/create-upload.component.html
+++ b/src/app/photo-upload/create-upload/create-upload.component.html
@@ -1,15 +1,19 @@
-<div>
-  <button md-raised-button (click)="browse()">browseFrom</button>
-  <button md-raised-button (click)="browseTo()">browseTo</button>
-  <button md-raised-button (click)="start(params)">start</button>
+<div class="controls">
+  <div>
+    <button md-raised-button (click)="browseSource()">Source</button>
+    {{uploadSource| json}}
+  </div>
+
+  <div>
+    <button md-raised-button (click)="browseDestination()">Destination</button>
+    {{uploadDestination| json}}
+  </div>
+
+  <div>
+    <button md-raised-button (click)="start(params)">start</button>
+  </div>
 </div>
 
 <div>{{params | json}}</div>
 
-<od-virtualscroll [vsData]="vsService.data$" [vsOptions]="vsService.options$" *ngIf="vsService.data$">
-  <ng-template let-item let-row="row" let-column="column">
-    <div class="image-wrp">
-      <img [hidden]="!item.loaded" src="{{item.images[item.images.length - 1].source}}" (load)="item.loaded = true"/>
-    </div>
-  </ng-template>
-</od-virtualscroll>
+<app-photo-scroller [data]="loadedViewPhotos" [photoSource]="uploadSource"></app-photo-scroller>
