--- a/src/app/photo-upload/photo-upload.component.html
+++ b/src/app/photo-upload/photo-upload.component.html
@@ -1,4 +1,4 @@
-<md-tab-group>
+<md-tab-group class="photo-upload-content" (selectChange)="onTabChange()">
   <md-tab label="Create upload">
     <app-create-upload></app-create-upload>
   </md-tab>
