--- a/src/app/photo-upload/create-upload/create-upload.component.scss
+++ b/src/app/photo-upload/create-upload/create-upload.component.scss
@@ -5,27 +5,6 @@
   max-width: 100vw;
 }
 
-od-virtualscroll {
-  min-height: 202px;
-  min-width: 202px;
-  overflow-x: hidden;
-}
-
-.image-wrp {
-  box-sizing: border-box;
-  display: inline-block;
-  height: 202px;
-  margin-right: -5px;
-  position: relative;
-  width: 202px;
-
-  img {
-    height: 202px;
-    object-fit: cover;
-    width: 202px;
-  }
-}
-
-/deep/ .od-scroll-container {
-  margin: 0 auto;
+.controls {
+  padding: 10px;
 }
