--- a/src/app/photo-upload/photo-upload.component.scss
+++ b/src/app/photo-upload/photo-upload.component.scss
@@ -9,11 +9,15 @@ md-tab-group {
   flex: 1;
 }
 
-/deep/ .mat-tab-body-wrapper {
-  flex: 1 1 auto;
-  min-width: 0;
-  min-height: 0;
-}
-/deep/ .mat-tab-body-content {
-  display: flex;
+
+/deep/ .photo-upload-content {
+  .mat-tab-body-wrapper {
+    flex: 1 1 auto;
+    min-width: 0;
+    min-height: 0;
+  }
+  .mat-tab-body-content {
+    display: flex;
+    overflow-x: hidden;
+  }
 }
