deployment fixes finish worker service for upload photo task finish tab in-progress

--- a/src/app/header/provider-status/provider-status.component.html
+++ b/src/app/header/provider-status/provider-status.component.html
@@ -1,7 +1,7 @@
 <button class="status-button" md-button (click)="onButtonClick()">
   <div class="button-content">
-    <img class="avatar" src="{{user?.photoUrl}}"
-         *ngIf="provider.status === providerStatuses.CONNECTED && user"/>
+    <img class="avatar" [src]="user?.photoUrl || './assets/avatar-placeholder.png'"
+         *ngIf="provider.status === providerStatuses.CONNECTED"/>
     <md-icon [svgIcon]="icons[provider.type]"
              *ngIf="provider.status !== providerStatuses.CONNECTED"></md-icon>
     <div class="status-indicator">
