--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,16 @@
-HOME
+<button md-button class="navigation-button" routerLink="/photo-upload">
+  <md-card>
+    <md-card-title>Upload photos</md-card-title>
+    <p class="summary">Upload photos from one social network to another</p>
+    <md-icon>burst_mode</md-icon>
+  </md-card>
+</button>
 
-<button md-button (click)="openSidenav()">
-  OpenSidenav
+<button md-button class="navigation-button" routerLink="/help">
+  <md-card>
+    <md-card-title>Help</md-card-title>
+    <p class="summary">Short about and simple guides for project</p>
+    <md-icon>help</md-icon>
+  </md-card>
 </button>
 
