--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import './resources/theme';
+@import './resources/loader-animation';
 
 html, body {
   margin: 0;
@@ -10,5 +11,16 @@ html, body {
 
 body {
   display: flex;
-}
 
+  app-root {
+    display: flex;
+    flex: 1;
+  }
+
+  .loader-wrapper {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+  }
+}
