--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,10 @@
   <app-provider-status *ngFor="let provider of providers" [provider]="provider">
   </app-provider-status>
   <span class="spacer"></span>
-  <button md-icon-button>
+  <button md-icon-button *ngIf="gitUrl" (click)="openUrl(gitUrl)">
     <md-icon svgIcon="git"></md-icon>
+  </button>
+  <button md-icon-button routerLink="/home">
+    <md-icon>home</md-icon>
   </button>
 </md-toolbar>
