--- a/src/app/photo-upload/in-progress/in-progress.component.html
+++ b/src/app/photo-upload/in-progress/in-progress.component.html
@@ -3,7 +3,7 @@
   <md-card-title>{{task.uploadSource.name}}</md-card-title>
   <md-card-subtitle>To: {{task.uploadDestination.name}}</md-card-subtitle>
 
-  <img md-card-image *ngIf="task.currentPhoto.thumbUrl" [src]="task.currentPhoto.thumbUrl">
+  <img md-card-image *ngIf="task.currentPhoto?.thumbUrl" [src]="task.currentPhoto.thumbUrl">
 
   <div class="progress-bar-container">
     <md-progress-bar mode="indeterminate" *ngIf="!task.pause"></md-progress-bar>
@@ -11,10 +11,10 @@
 
 
   <md-card-content>
-    <p *ngIf="task.currentPhoto.description.length > 0">
+    <p *ngIf="task.currentPhoto?.description?.length > 0">
       {{task.currentPhoto.description}}
     </p>
-    <p *ngIf="task.currentPhoto.description.length === 0" class="no-description">
+    <p *ngIf="task.currentPhoto?.description?.length === 0 || !task.currentPhoto?.description" class="no-description">
       No description
     </p>
   </md-card-content>
@@ -22,7 +22,7 @@
     <button md-icon-button *ngIf="!task.pause" (click)="task.pauseUpload()" [disabled]="task.complete">
       <md-icon>pause</md-icon>
     </button>
-    <button md-icon-button *ngIf="task.pause" (click)="task.executeUploadTask()">
+    <button md-icon-button *ngIf="task.pause" (click)="task.executeUploadTask()" [disabled]="task.complete">
       <md-icon>play_arrow</md-icon>
     </button>
     <button md-icon-button (click)="task.disposeUploadTask()">
