--- a/src/app/photo-upload/create-upload/photo-upload-configs/photo-upload-configs.component.html
+++ b/src/app/photo-upload/create-upload/photo-upload-configs/photo-upload-configs.component.html
@@ -1,14 +1,13 @@
-<form #uploadRange="ngForm">
-  <md-input-container>
+<form #uploadRange="ngForm" class="configs-from">
+  <md-input-container class="configs-item">
     <input mdInput type="number" required
            name="from" placeholder="Upload from"
-           min="1" max="{{localForm.to}}"
+           min="1" [max]="localForm.to"
            [(ngModel)]="localForm.from" #from="ngModel">
   </md-input-container>
-  <md-input-container>
+  <md-input-container class="configs-item">
     <input mdInput type="number" required
            name="to" placeholder="Upload to"
-           min="{{localForm.from}}"
            [(ngModel)]="localForm.to" #to="ngModel">
     <md-hint align="end"></md-hint>
   </md-input-container>
