vScroll resize fix

--- a/src/app/photo-upload/create-upload/photo-scroller/photo-scroller.component.html
+++ b/src/app/photo-upload/create-upload/photo-scroller/photo-scroller.component.html
@@ -1,4 +1,4 @@
-<od-virtualscroll [vsData]="scrollObserver" [vsOptions]="options"
+<od-virtualscroll [vsData]="scrollObserver" [vsOptions]="options" [vsResize]="resize$"
                   [vsScrollTop]="scrollTop$" *ngIf="scrollObserver">
   <ng-template let-item let-row="row" let-column="column">
     <div class="image-wrp">
