--- a/src/app/photo-upload/create-upload/create-upload.component.html
+++ b/src/app/photo-upload/create-upload/create-upload.component.html
@@ -8,7 +8,7 @@
             From:
           </div>
           <div class="button-sub-line" *ngIf="!uploadSource">
-            Source of yours photos
+            Source of your photos
           </div>
           <div class="button-sub-line" *ngIf="uploadSource">
             {{uploadSource.name}}
@@ -24,7 +24,7 @@
             To:
           </div>
           <div class="button-sub-line" *ngIf="!uploadDestination">
-            Where to upload yours photos
+            Where to upload your photos
           </div>
           <div class="button-sub-line" *ngIf="uploadDestination">
             {{uploadDestination.name}}
