--- a/src/app/photo-upload/create-upload/photo-scroller/photo-scroller.component.html
+++ b/src/app/photo-upload/create-upload/photo-scroller/photo-scroller.component.html
@@ -9,7 +9,7 @@
 
 <div class="message" *ngIf="!photoSource && !initLoading">
   <md-icon>photo</md-icon>
-  <span class="message-text">Select source of yours photos</span>
+  <span class="message-text">Select source of your photos</span>
 </div>
 <div class="message" *ngIf="initLoading">
   <div class="sk-folding-cube">
