--- a/src/app/photo-upload/create-upload/create-upload.component.scss
+++ b/src/app/photo-upload/create-upload/create-upload.component.scss
@@ -1,8 +1,11 @@
 :host {
   display: flex;
   flex-direction: row;
-  flex: 1;
+  flex: 1 1 0;
+  justify-content: center;
+  flex-wrap: wrap;
   max-width: 100vw;
+  max-height: 100vh;
 }
 
 md-card.controls {
@@ -70,7 +73,7 @@ md-card.scroller {
   min-height: 250px;
 
   app-photo-scroller {
-    flex: 1;
+    flex: 1 1 0;
   }
 }
 
