few fixes add cope description checkbox

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   </md-card>
 </button>
 
-<button md-button class="navigation-button" routerLink="/help">
+<button md-button class="navigation-button" routerLink="/help" *ngIf="false">
   <md-card>
     <md-card-title>Help</md-card-title>
     <p class="summary">Short about and simple guides for project</p>
