--- a/src/app/header/provider-status/provider-status.component.html
+++ b/src/app/header/provider-status/provider-status.component.html
@@ -1,9 +1,12 @@
-<button class="status-button" md-button (click)="onButtonClick()">
+<button class="status-button" md-button (click)="onButtonClick()" [mdTooltip]="'Login ' + providerNames[provider.type]" [mdTooltipDisabled]="provider.status === providerStatuses.CONNECTED">
   <div class="button-content">
+
     <img class="avatar" [src]="user?.photoUrl || './assets/avatar-placeholder.png'"
          *ngIf="provider.status === providerStatuses.CONNECTED"/>
-    <md-icon [svgIcon]="icons[provider.type]"
-             *ngIf="provider.status !== providerStatuses.CONNECTED"></md-icon>
+
+      <md-icon [svgIcon]="icons[provider.type]"
+               *ngIf="provider.status !== providerStatuses.CONNECTED"></md-icon>
+
     <div class="status-indicator">
       <md-spinner *ngIf="provider.status === providerStatuses.UNDEFINED"
                   color="accent" strokeWidth="12"></md-spinner>
