--- a/src/app/photo-upload/create-upload/create-upload.component.html
+++ b/src/app/photo-upload/create-upload/create-upload.component.html
@@ -5,7 +5,7 @@
         <md-icon class="button-icon">navigate_before</md-icon>
         <div class="button-text">
           <div class="button-line">
-            From:
+            Source:
           </div>
           <div class="button-sub-line" *ngIf="!uploadSource">
             Source of your photos
@@ -21,7 +21,7 @@
         <md-icon class="button-icon">navigate_next</md-icon>
         <div class="button-text">
           <div class="button-line">
-            To:
+            Destination:
           </div>
           <div class="button-sub-line" *ngIf="!uploadDestination">
             Where to upload your photos
@@ -34,6 +34,7 @@
     </button>
     <div class="settings">
       <app-photo-upload-configs [configs]="uploadConfigs"></app-photo-upload-configs>
+      <md-checkbox [(ngModel)]="uploadConfigs.copyDescription" color="primary">Copy description</md-checkbox>
     </div>
   </md-card-content>
 
