--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,5 +23,14 @@ md-sidenav-container {
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100% - 64px);
+  overflow-x: auto;
 }
+
+@media (max-width: 600px) {
+  .content {
+    height: calc(100% - 56px);
+  }
+}
+
+
