--- a/src/app/photo-upload/create-upload/create-upload.component.scss
+++ b/src/app/photo-upload/create-upload/create-upload.component.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   flex: 1 1 0;
-  justify-content: center;
   flex-wrap: wrap;
   max-width: 100vw;
   max-height: 100vh;
@@ -18,6 +17,15 @@ md-card.controls {
     width: calc(100% + 48px);
     margin: 0 -24px 12px -24px;
   }
+
+
+  @media (max-width: 600px) {
+    md-card-content {
+      width: calc(100% + 32px);
+      margin: 0 -16px 12px -16px;
+    }
+  }
+
 
   .settings {
     padding: 12px 24px;
