--- a/src/app/photo-upload/in-progress/in-progress.component.scss
+++ b/src/app/photo-upload/in-progress/in-progress.component.scss
@@ -37,6 +37,14 @@ $card-height: 346px;
       margin: 0 -24px 12px -24px;
       width: calc(100% + 48px);
     }
+
+    @media (max-width: 600px) {
+      md-progress-bar {
+        margin: 0 -16px 12px -16px;
+        width: calc(100% + 32px);
+      }
+    }
+
   }
 
 
