add privacy policy

--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -7,6 +7,12 @@
         <md-icon md-list-icon>burst_mode</md-icon>
         <p md-line> Upload photos </p>
       </md-list-item>
+      <h3 md-subheader>Policy</h3>
+      <md-list-item routerLink="./privacy-policy"
+                    [routerLinkActive]="['active']">
+        <md-icon md-list-icon>gavel</md-icon>
+        <p md-line> Privacy Policy </p>
+      </md-list-item>
     </md-nav-list>
   </md-sidenav>
 
