edge button text layout

--- a/src/app/photo-upload/create-upload/create-upload.component.scss
+++ b/src/app/photo-upload/create-upload/create-upload.component.scss
@@ -49,7 +49,7 @@ md-card.controls {
       .button-text {
         padding: 8px;
         flex: 1;
-        text-align: start;
+        text-align: left;
         .button-line {
           line-height: 16px;
         }
